gen/Gammar/ProgramParser.java
// Generated from C:/Users/Omar Arab/IdeaProjects/untitled5/src/Gammar/ProgramParser.g4 by ANTLR 4.13.2
package Gammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ProgramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, FOR=3, DO=4, WHILE=5, FUNCTION=6, RETURN=7, TYPE=8, VARIABLE_TYPE=9, 
		ACCESS_TYPE=10, NEW=11, IMPORT=12, EXPORT=13, FROM=14, THIS=15, CLASS=16, 
		BOOLEAN=17, INTERFACE=18, EXTEND=19, IMPLEMENT=20, AT=21, PLUS=22, MINUS=23, 
		TIMES=24, DIVIDE=25, EQUAL=26, GREATER=27, GREATER_EQUAL=28, LESS=29, 
		FIRST_TAG=30, LESS_EQUAL=31, INCREMENT=32, DECREMENT=33, PLUS_EQUAL=34, 
		MINUS_EQUAL=35, MUL_ASSIGN=36, DIV_ASSIGN=37, MOD_ASSIGN=38, LPAREN=39, 
		RPAREN=40, LBRACKET=41, RBRACKET=42, LBRACE=43, RBRACE=44, SEMICOLON=45, 
		COMMA=46, COLON=47, DOT=48, ARROW=49, AND=50, OR=51, EQUAL_EQUAL=52, NOT_EQUAL=53, 
		IDENTIFIER=54, NUMBER=55, STRING=56, WHITESPACE=57, COMMENT=58, BLOCK_COMMENT=59, 
		DOCTYPE=60, META=61, SCRIPT=62, STYLE=63, OPEN_TAG_START=64, SLASH=65, 
		TAG_CLOSE=66, SELF_CLOSING_TAG_CLOSE=67, ATTRIBUTE_VALUE=68, BINDING_OPEN=69, 
		BINDING_CLOSE=70, EVENT_BINDING=71, EVENT_BINDING_CLOSE=72, PROPRETY_BINDING=73, 
		PROPRETY_BINDING_CLOSE=74, DIRECTIVE_PREFIX=75, TEXT=76, COMMENTH=77, 
		EQUALH=78, WS=79, TEXT_HTML=80, OPEN_TAG_HTML=81, OPEN_BINDING=82, CLOSE_TAG=83, 
		CSS_TEXT=84, CSS_COLON=85, DOTH=86, LBRACE_CSS=87, RBRACE_CSS=88, STYLE_CLOSE=89, 
		SEMECOLON=90, WS_CSS=91;
	public static final int
		RULE_program = 0, RULE_line = 1, RULE_statement = 2, RULE_iterationStatement = 3, 
		RULE_declaration = 4, RULE_angularType = 5, RULE_map = 6, RULE_passedParameter = 7, 
		RULE_inputStatement = 8, RULE_outputStatement = 9, RULE_classDeclaration = 10, 
		RULE_variableDeclaration = 11, RULE_functionDeclaration = 12, RULE_parameters = 13, 
		RULE_parameter = 14, RULE_ifStatement = 15, RULE_elseIfStatement = 16, 
		RULE_forStatement = 17, RULE_whileStatement = 18, RULE_doWhileStatement = 19, 
		RULE_block = 20, RULE_importStatement = 21, RULE_returnStatement = 22, 
		RULE_expression = 23, RULE_logicalOperations = 24, RULE_arithmeticOperations = 25, 
		RULE_assignmentOperation = 26, RULE_comparsionOperation = 27, RULE_memberAccess = 28, 
		RULE_arrowFunction = 29, RULE_functionCall = 30, RULE_arrayDeclaration = 31, 
		RULE_arrayRightSide = 32, RULE_arrayElements = 33, RULE_interface = 34, 
		RULE_htmlDoc = 35, RULE_doctype = 36, RULE_htmlElement = 37, RULE_metaTag = 38, 
		RULE_scriptTag = 39, RULE_styleTag = 40, RULE_styleContent = 41, RULE_cssElement = 42, 
		RULE_openTag = 43, RULE_closeTag = 44, RULE_selfClosingTag = 45, RULE_attribute = 46, 
		RULE_binding = 47, RULE_eventBinding = 48, RULE_propertyBinding = 49, 
		RULE_directive = 50, RULE_tagContent = 51, RULE_content = 52, RULE_comment = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "line", "statement", "iterationStatement", "declaration", 
			"angularType", "map", "passedParameter", "inputStatement", "outputStatement", 
			"classDeclaration", "variableDeclaration", "functionDeclaration", "parameters", 
			"parameter", "ifStatement", "elseIfStatement", "forStatement", "whileStatement", 
			"doWhileStatement", "block", "importStatement", "returnStatement", "expression", 
			"logicalOperations", "arithmeticOperations", "assignmentOperation", "comparsionOperation", 
			"memberAccess", "arrowFunction", "functionCall", "arrayDeclaration", 
			"arrayRightSide", "arrayElements", "interface", "htmlDoc", "doctype", 
			"htmlElement", "metaTag", "scriptTag", "styleTag", "styleContent", "cssElement", 
			"openTag", "closeTag", "selfClosingTag", "attribute", "binding", "eventBinding", 
			"propertyBinding", "directive", "tagContent", "content", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'else'", "'for'", "'do'", "'while'", "'function'", "'return'", 
			null, null, null, "'new'", "'import'", "'export'", "'from'", "'this'", 
			null, null, "'interface'", "'extends'", "'implement'", "'@'", "'+'", 
			"'-'", "'*'", null, null, null, "'>='", "'< '", null, "'<='", "'++'", 
			"'--'", "'+='", "'-='", "'*='", "'/='", "'%='", null, null, null, null, 
			null, null, null, "','", null, null, "'=>'", "'&&'", "'||'", "'=='", 
			"'!='", null, null, null, null, null, null, "'!DOCTYPE html>'", "'meta '", 
			"'script'", "'style'", null, null, null, "'/>'", null, null, "'}}'", 
			null, null, null, null, "'#'", null, null, null, null, null, null, null, 
			null, null, null, null, "'{'", "'}'", "'</style>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "FOR", "DO", "WHILE", "FUNCTION", "RETURN", "TYPE", 
			"VARIABLE_TYPE", "ACCESS_TYPE", "NEW", "IMPORT", "EXPORT", "FROM", "THIS", 
			"CLASS", "BOOLEAN", "INTERFACE", "EXTEND", "IMPLEMENT", "AT", "PLUS", 
			"MINUS", "TIMES", "DIVIDE", "EQUAL", "GREATER", "GREATER_EQUAL", "LESS", 
			"FIRST_TAG", "LESS_EQUAL", "INCREMENT", "DECREMENT", "PLUS_EQUAL", "MINUS_EQUAL", 
			"MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "LPAREN", "RPAREN", "LBRACKET", 
			"RBRACKET", "LBRACE", "RBRACE", "SEMICOLON", "COMMA", "COLON", "DOT", 
			"ARROW", "AND", "OR", "EQUAL_EQUAL", "NOT_EQUAL", "IDENTIFIER", "NUMBER", 
			"STRING", "WHITESPACE", "COMMENT", "BLOCK_COMMENT", "DOCTYPE", "META", 
			"SCRIPT", "STYLE", "OPEN_TAG_START", "SLASH", "TAG_CLOSE", "SELF_CLOSING_TAG_CLOSE", 
			"ATTRIBUTE_VALUE", "BINDING_OPEN", "BINDING_CLOSE", "EVENT_BINDING", 
			"EVENT_BINDING_CLOSE", "PROPRETY_BINDING", "PROPRETY_BINDING_CLOSE", 
			"DIRECTIVE_PREFIX", "TEXT", "COMMENTH", "EQUALH", "WS", "TEXT_HTML", 
			"OPEN_TAG_HTML", "OPEN_BINDING", "CLOSE_TAG", "CSS_TEXT", "CSS_COLON", 
			"DOTH", "LBRACE_CSS", "RBRACE_CSS", "STYLE_CLOSE", "SEMECOLON", "WS_CSS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProgramParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProgramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public HtmlDocContext htmlDoc() {
			return getRuleContext(HtmlDocContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
			case FOR:
			case DO:
			case WHILE:
			case FUNCTION:
			case RETURN:
			case VARIABLE_TYPE:
			case IMPORT:
			case EXPORT:
			case THIS:
			case CLASS:
			case BOOLEAN:
			case INTERFACE:
			case AT:
			case LPAREN:
			case LBRACE:
			case IDENTIFIER:
			case NUMBER:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(108);
					line();
					}
					}
					setState(111); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 126110135417811706L) != 0) );
				}
				break;
			case FIRST_TAG:
			case OPEN_TAG_START:
			case OPEN_TAG_HTML:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				htmlDoc();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
	 
		public LineContext() { }
		public void copyFrom(LineContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AngularContext extends LineContext {
		public AngularTypeContext angularType() {
			return getRuleContext(AngularTypeContext.class,0);
		}
		public AngularContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterAngular(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitAngular(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitAngular(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStateContext extends LineContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ImportStateContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterImportState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitImportState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitImportState(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementtContext extends LineContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementtContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterStatementt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitStatementt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitStatementt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClassContext extends LineContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public ClassContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitClass(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceStatementContext extends LineContext {
		public InterfaceContext interface_() {
			return getRuleContext(InterfaceContext.class,0);
		}
		public InterfaceStatementContext(LineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterInterfaceStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitInterfaceStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitInterfaceStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new ImportStateContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				importStatement();
				}
				break;
			case 2:
				_localctx = new ClassContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				classDeclaration();
				}
				break;
			case 3:
				_localctx = new AngularContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				angularType();
				}
				break;
			case 4:
				_localctx = new StatementtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(119);
				statement();
				}
				break;
			case 5:
				_localctx = new InterfaceStatementContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(120);
				interface_();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationStatementContext extends StatementContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclarationStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterDeclarationStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitDeclarationStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitDeclarationStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IterationContext extends StatementContext {
		public IterationStatementContext iterationStatement() {
			return getRuleContext(IterationStatementContext.class,0);
		}
		public IterationContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterIteration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitIteration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitIteration(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpressContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterExpress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitExpress(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitExpress(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfContext extends StatementContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IfContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReturnContext extends StatementContext {
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public ReturnContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new IterationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				iterationStatement();
				}
				break;
			case 2:
				_localctx = new DeclarationStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				declaration();
				}
				break;
			case 3:
				_localctx = new IfContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				ifStatement();
				}
				break;
			case 4:
				_localctx = new ReturnContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(126);
				returnStatement();
				}
				break;
			case 5:
				_localctx = new ExpressContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(127);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IterationStatementContext extends ParserRuleContext {
		public IterationStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iterationStatement; }
	 
		public IterationStatementContext() { }
		public void copyFrom(IterationStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DowhileContext extends IterationStatementContext {
		public DoWhileStatementContext doWhileStatement() {
			return getRuleContext(DoWhileStatementContext.class,0);
		}
		public DowhileContext(IterationStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterDowhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitDowhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitDowhile(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForContext extends IterationStatementContext {
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public ForContext(IterationStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitFor(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhileContext extends IterationStatementContext {
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public WhileContext(IterationStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramParserListener ) ((ProgramParserListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramParserVisitor ) return ((ProgramParserVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}
